DevTools: [regression] remote debugging to a tcp port does not work via chrome:inspect

BUG=702473

Review-Url: https://codereview.chromium.org/2752423002
Cr-Commit-Position: refs/heads/master@{#458191}

Former-commit-id: 9c08889d47139672b311b30e9075a57459a6ec86